# chatzx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install-windows.cmd  install.bat  install.sh  pyproject.toml  run.bat  run.cmd  run.ps1  run.ps1.from-cmd.bat  run.sh  setup.py  uninstall.bat  uninstall.sh  version.properties
.github/workflows/: build-apk.yml
android/: .gitignore  build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/chatxz/android/: CallAudioEngine.java  ChatxzBridge.java  ChatxzForegroundService.java  ChatxzNotificationHelper.java  MainActivity.java  UsbPermissionReceiver.java
android/app/src/main/java/com/chatzx/android/: ChatxzBridge.java  MainActivity.java
android/app/src/main/python/: main.py  requirements.txt
android/app/src/main/python/chatxz/: __init__.py  __main__.py  _version.py  android_call_audio.py  app.py  portable.py  release_notes.py
android/app/src/main/python/chatxz/core/: android_serial.py  call_audio_engine.py  calls.py  contacts.py  discovery.py  filetransfer.py  identity.py  lan_beacon.py  lan_rns.py  messaging.py  peer_identity.py  peer_probe.py  rns_interfaces.py  rns_tuning.py  serial_transfer.py  transport_isolation.py  voice_call.py
android/app/src/main/python/chatxz/core/audio/: __init__.py  devices.py  engine.py  jitter.py
android/app/src/main/python/chatxz/rnsd/: __main__.py  ipc_server.py  service.py  transport.py
android/app/src/main/python/chatxz/utils/: debug_log.py  file_serve.py  folder_picker.py  helpers.py  platform.py  system.py
android/app/src/main/python/chatxz/web/: call_bridge.py  rust_bridge.py  rust_launcher.py  server.py
android/app/src/main/python/chatxz/web/static/: calls.js  emoji-keywords.json  index.html
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
chatxz/: _version.py  app.py  portable.py  release_notes.py
chatxz-media/: Cargo.toml
chatxz-media/src/: jitter_buffer.rs  lib.rs  opus_codec.rs  protocol.rs
chatxz/android_usb/: bootstrap.py
chatxz/core/: android_call_audio.py  call_audio_engine.py  calls.py  contacts.py  discovery.py  identity.py  lan_beacon.py  lan_rns.py  lan_targets.py  media_engine.py  messaging.py  opus_native.py  peer_identity.py  peer_probe.py  rns_interfaces.py  serial_transfer.py  voice.py  voice_call.py  voice_jitter_buffer.py
chatxz/core/audio/: devices.py  engine.py  opus.py  session.py
chatxz/rnsd/: __init__.py  __main__.py  service.py
chatxz/utils/: android_notify.py  debug_log.py  folder_picker.py  helpers.py  lan_scope.py  platform.py  rns_frozen.py  system.py
chatxz/web/: call_bridge.py  server.py
chatxz/web/static/: calls.js  index.html
config/: config.ini
crates/chatxz-call/: Cargo.toml
crates/chatxz-call/src/: lib.rs
crates/chatxz-media/: Cargo.toml
crates/chatxz-media/src/: jitter.rs  lib.rs  opus.rs  session.rs
crates/chatxz-protocol/: Cargo.toml
crates/chatxz-protocol/src/: lib.rs
crates/chatxz-server/: Cargo.toml
crates/chatxz-server/src/: api.rs  main.rs  proxy.rs  rns_client.rs  rns_ipc.rs  rnsd_spawn.rs  ws.rs  ws_proxy.rs
docs/: VOICE.md
packaging/macos/: README-PORTABLE.txt  build-portable.sh  chatxz-portable.spec
packaging/windows/: chatxz-portable.spec  github-workflow-build-releases.yml  rthook_rns.py
scripts/: build-media.sh  build-rust-android.sh  bump-version.sh  ensure_voice_native.py  install-arch.sh  install-debian.sh  install-macos.sh  install-ubuntu.sh  install-windows.ps1  launch-server.bat  launch-server.ps1  launch-server.sh  pick-folder.py  restart-server.sh  setup-serial-perms.sh  stop-chatxz.bat  stop-chatxz.sh  windows-python.bat
tests/: test_audio_package.py  test_call_audio_engine.py  test_calls_v1.py  test_connect_wake.py  test_contact_delete_blocklist.py  test_contact_endpoint.py  test_contact_names.py  test_cross_traffic.py  test_defaults_hub.py  test_discovery_identity.py  test_hub_tcp_relay.py  test_inbound_link.py  test_lan_scope.py  test_opus_native.py  test_path_selection.py  test_peer_identity.py  test_peer_probe.py  test_platform_interfaces.py  test_probe_interval.py  test_serial_announce_policy.py  test_serial_failover.py  test_serial_transfer.py  test_startup.py  test_user_disconnect.py  test_voice_call.py
