[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatxz"
version = "0.3.121"
description = "Decentralized chat over Reticulum Network Stack"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "rns>=0.8.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
voice = ["pyaudio"]
tui = ["textual>=0.52"]
full = ["pyaudio", "textual>=0.52"]

[project.scripts]
chatxz = "chatxz.app:main"
chatxz-web = "chatxz.web.server:main"

[tool.setuptools.package-data]
chatxz = ["web/static/*"]
