[package]
name = "chatxz-media"
version = "1.0.0"
edition = "2021"
description = "Real-time media engine for chatxz over RNS"
license = "GPL-3.0-only"

[lib]
name = "chatxz_media"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
audiopus = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3