[package]
name = "chatxz-call"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Voice/video/screen call state machine for chatxz"

[dependencies]
chatxz-protocol = { path = "../chatxz-protocol" }
chatxz-media = { path = "../chatxz-media" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true