[package]
name = "chatxz-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "chatxz primary HTTP/WebSocket server (Rust)"

[[bin]]
name = "chatxz-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
chatxz-call = { path = "../chatxz-call" }
chatxz-media = { path = "../chatxz-media" }
chatxz-protocol = { path = "../chatxz-protocol" }
futures-util = "0.3"
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true