[package]
name = "chatxz-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "chatxz primary HTTP/WebSocket server (Rust)"

[[bin]]
name = "chatxz"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
chatxz-call = { path = "../chatxz-call" }
chatxz-media = { path = "../chatxz-media" }
chatxz-protocol = { path = "../chatxz-protocol" }
futures-util = "0.3"
hex = "0.4"
http-body-util = "0.1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2"